--- a/masterfiles/templates/cfengine_watchdog.mustache
+++ b/masterfiles/templates/cfengine_watchdog.mustache
@@ -1,3 +1,3 @@
 # This file is managed by CFEngine
 # If cf-execd is executable and if no process matching cf-execd can be found then restart cf-execd
-* * * * * root [ -x {{{vars.sys.cf_execd}}} ] && if ! {{{vars.paths.pgrep}}} cf-execd > /dev/null; then {{{vars.sys.cf_execd}}}; fi
+* * * * * root [ -x {{{vars.sys.cf_execd}}} ] && { {{{vars.paths.pgrep}}} cf-execd > /dev/null; if [ "$?" -eq 1 ]; then {{{vars.sys.cf_execd}}}; fi;}
