--- a/masterfiles/cfe_internal/enterprise/templates/httpd.conf.mustache
+++ b/masterfiles/cfe_internal/enterprise/templates/httpd.conf.mustache
@@ -6,6 +6,7 @@ ServerTokens ProductOnly
 ServerName {{{vars.sys.fqhost}}}
 ServerRoot "{{{vars.sys.workdir}}}/httpd"
 Listen 80
+PidFile "{{{vars.sys.workdir}}}/httpd/httpd.pid"
 
 # Modules
 
@@ -291,6 +292,11 @@ AddType    application/x-httpd-php-source php{{{vars.cfe_internal_hub_vars.php_v
 
 <Directory "{{{vars.cfe_internal_hub_vars.docroot}}}/system">
   # Whats in here that got a specific deny?
+  Deny from all
+  AllowOverride None
+</Directory>
+
+<Directory "{{{vars.cfe_internal_hub_vars.docroot}}}/static">
   Deny from all
   AllowOverride None
 </Directory>
