--- a/masterfiles/modules/packages/vendored/zypper.mustache
+++ b/masterfiles/modules/packages/vendored/zypper.mustache
@@ -1,4 +1,7 @@
-#!/var/cfengine/bin/python
+#!/usr/bin/python
+# Note that the shebang above is ignored when run in policy
+# See lib/packages.cf `package_module zypper` use of the
+# `interpreter` attribute to use cfengine-selected-python.
 
 #####################################################################################
 # Copyright 2016 Normation SAS
@@ -66,7 +69,7 @@ def redirection_is_broken():
     # and that's good, because it would have been much more tricky to solve.
     global redirection_is_broken_cached
     if redirection_is_broken_cached == -1:
-        cmd_line = [sys.argv[0], "internal-test-stderr"]
+        cmd_line = [sys.executable, sys.argv[0], "internal-test-stderr"]
         if subprocess.call(cmd_line, stdout=sys.stderr) == 0:
             redirection_is_broken_cached = 0
         else:
