--- a/masterfiles/templates/cf-apache.service.mustache
+++ b/masterfiles/templates/cf-apache.service.mustache
@@ -1,6 +1,7 @@
 [Unit]
 Description=CFEngine Enterprise Webserver
 After=syslog.target
+Wants=cf-postgres.service
 After=cf-postgres.service
 ConditionPathExists={{{vars.sys.workdir}}}/httpd/bin/apachectl
 PartOf=cfengine3.service
@@ -9,9 +10,10 @@ PartOf=cfengine3.service
 Type=forking
 ExecStart={{{vars.sys.workdir}}}/httpd/bin/apachectl start
 ExecStop={{{vars.sys.workdir}}}/httpd/bin/apachectl stop
-PIDFile={{{vars.sys.workdir}}}/httpd/logs/httpd.pid
+PIDFile={{{vars.sys.workdir}}}/httpd/httpd.pid
 Restart=always
 RestartSec=10
+UMask=0177
 
 [Install]
 WantedBy=multi-user.target
