--- a/masterfiles/cfe_internal/enterprise/templates/httpd.conf.mustache
+++ b/masterfiles/cfe_internal/enterprise/templates/httpd.conf.mustache
@@ -5,7 +5,14 @@ ServerSignature Off
 ServerTokens ProductOnly
 ServerName {{{vars.sys.fqhost}}}
 ServerRoot "{{{vars.sys.workdir}}}/httpd"
-Listen 80
+{{^classes.cfe_enterprise_disable_plain_http}}
+# ENT-10411
+# ENT-10646 - Listen 80 often causes IPv6 related errors, specifying ipv4 squashes them.
+#   Unclear why the same is not an issue for 443
+#   To enable listening on ipv6 add Listen [::]:80
+Listen 0.0.0.0:80
+{{/classes.cfe_enterprise_disable_plain_http}}
+
 PidFile "{{{vars.mission_portal_apache_from_stage.httpd_pid_file}}}"
 
 # Modules
@@ -147,7 +154,11 @@ LogLevel warn
 
   # TLS Compression should be disabled to avoid CRIME
   # https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-4929
-  SSLCompression off
+  # SSLCompression off
+  # As part of security hardening we minimize the features provided by OpenSSL.
+  # Case in point, we build openssl 3 without support for compression. As such,
+  # we do not explicitly disable SSL Compression beginning with CFEngine
+  # Enteprprise 3.21.0 as apache is unable to then validate the configuration.
 
   # This is not explicitly enabled to allow the requesting client the first
   # choice of support ciphers
@@ -159,13 +170,15 @@ LogLevel warn
   # browser compatibility and security. Use ~{{vars.sys.workdir}}/openssl ciphers
   # -v HIGH~ to see what ciphers are considered HIGH security.
 
-  SSLCipherSuite HIGH
+  # SSLCipherSuite HIGH
 
   # A more secure setting might be:
   # SSLCipherSuite EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH
 
-  # Some versions of SSL and TLS are known to be insecure, so we disable them by default
-  SSLProtocol all -SSLv2 -SSLv3 -TLSv1
+  SSLCipherSuite {{{vars.def.cfe_enterprise_mission_portal_apache_sslciphersuite}}}
+
+  # The SSL protocol versions allowed
+  SSLProtocol {{{vars.def.cfe_enterprise_mission_portal_apache_sslprotocol}}}
 
   SSLRandomSeed startup builtin
   SSLRandomSeed connect builtin
@@ -184,12 +197,32 @@ LogLevel warn
     SSLEngine on
     SSLCertificateFile "{{{vars.cfe_internal_hub_vars.SSLCertificateFile}}}"
     SSLCertificateKeyFile "{{{vars.cfe_internal_hub_vars.SSLCertificateKeyFile}}}"
+{{#classes.cfe_enterprise_have_SSLCACertificateFile_defined}}
+    SSLCACertificateFile "{{{vars.cfe_internal_hub_vars.SSLCACertificateFile}}}"
+{{/classes.cfe_enterprise_have_SSLCACertificateFile_defined}}
 
     # Enable Strict Transport Security to prevent HTTPS users from
     # accessing http content.
     Header always set Strict-Transport-Security "max-age=63072000; includeSubdomains; preload"
     Header always set X-Frame-Options DENY
     Header always set X-Content-Type-Options nosniff
+
+    Header always set Content-Security-Policy \
+    "frame-ancestors 'self'; \
+    default-src 'self'; \
+    script-src 'self' 'unsafe-inline'; \
+    style-src 'self' 'unsafe-inline' fonts.googleapis.com; \
+    object-src 'none'; \
+    frame-src 'self'; \
+    child-src 'self'; \
+    img-src 'self' data: blob: avatars.githubusercontent.com badges.gitter.im fonts.gstatic.com kiwiirc.com raw.githubusercontent.com raw.github.com; \
+    font-src 'self' data: fonts.googleapis.com fonts.gstatic.com; \
+    connect-src 'self' fonts.gstatic.com fonts.googleapis.com; \
+    manifest-src 'self'; \
+    base-uri 'self'; \
+    form-action 'self'; \
+    media-src 'self'; \
+    worker-src 'self' blob:;"
 
     <FilesMatch "\.(cgi|shtml|phtml|php)$">
         SSLOptions +StdEnvVars
@@ -226,11 +259,11 @@ AddType    application/x-httpd-php-source php{{{vars.cfe_internal_hub_vars.php_v
   <IfModule rewrite_module>
     RewriteEngine On
 
-    {{^classes.cfe_enterprise_enable_plain_http}}
+    {{^classes.cfe_enterprise_disable_http_redirect_to_https}}
     # Force https with redirection
     RewriteCond %{HTTPS} off
     RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
-    {{/classes.cfe_enterprise_enable_plain_http}}
+    {{/classes.cfe_enterprise_disable_http_redirect_to_https}}
 
     {{#classes.mission_portal_index_php_redirect_enabled}}
     # redirect from `index.php/path` to `/path`
